# wiremann

./: Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
assets/: icon.icns
package/inno/: Wiremann_aarch64.iss  Wiremann_x86_64.iss
src/: app.rs  errors.rs  main.rs  worker_config.rs
src/audio/: engine.rs  mod.rs
src/cacher/: images.rs  lyrics.rs  mod.rs
src/controller/: commands.rs  events.rs  mod.rs  state.rs
src/image_processor/: mod.rs
src/lyrics/: mod.rs
src/lyrics_manager/: mod.rs
src/lyrics_manager/providers/: lrclib.rs  mod.rs  youly.rs
src/queue/: mod.rs
src/scanner/: metadata.rs  mod.rs
src/system_integration/: mod.rs
src/ui/: animations.rs  assets.rs  global_keybinds.rs  helpers.rs  icons.rs  keybinds.rs  mod.rs  res_handler.rs  theme.rs  wiremann.rs
src/ui/components/: controlbar.rs  element_ext.rs  icon.rs  icons.rs  image_cache.rs  lyrics.rs  mod.rs  navbar.rs  queue.rs  scrollbar.rs  slider.rs  titlebar.rs  virtual_list.rs
src/ui/components/pages/: library.rs  mod.rs  player.rs  playlists.rs
src/ui/components/toasts/: mod.rs  scanning_status.rs
src_old/: app.rs  main.rs  utils.rs
src_old/audio/: engine.rs
src_old/controller/: metadata.rs  mod.rs  player.rs
src_old/scanner/: cache.rs  mod.rs
src_old/ui/: assets.rs  icons.rs  image_cache.rs  mod.rs  theme.rs  wiremann.rs
src_old/ui/components/: controlbar.rs  mod.rs  navbar.rs  queue.rs  scrollbar.rs  slider.rs  titlebar.rs
src_old/ui/components/pages/: player.rs
