[package]
name = "wiremann"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wiremann/wiremann"
authors = ["Anant Narayan"]

[dependencies]
anyhow = "1.0.102"
crossbeam-channel = "0.5.15"
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "wayland",
] }
image = "0.25.9"
lofty = "0.23.2"
rodio = { version = "0.22.1", features = ["symphonia-all"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
walkdir = "2.5.0"
ahash = "0.8.12"
num_cpus = "1.17.0"
rand = "0.10.0"
bitcode = "0.6.9"
directories = "6.0.0"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
ron = "0.12.0"
thiserror = "2.0.18"
twox-hash = "2.1.2"
hex = "0.4.3"
zstd = "0.13.3"
lru = "0.16.3"
fast_image_resize = { version = "6.0.0", features = ["image"] }
rfd = "0.17.2"
dashmap = "7.0.0-rc2"
garb = "0.2.5"

[build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 0
debug = 0
incremental = true
codegen-units = 256
lto = false
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.bundle]
name = "Wiremann"
identifier = "com.anantnrg.wiremann"
icon = ["assets/logos/logo.png"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) Anant Narayan"
category = "Music"
short_description = "A fast native music player built with Rust."

[package.metadata.wix]
upgrade-guid = "B19FE058-B27E-4809-9ECC-BA29026F65ED"
path-guid = "1A4BBFB0-451C-440C-9C43-A8170F2BF9CA"
license = false
eula = false
